# eigen-sandbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: generate_data.cpp  predict_impact.cpp  propagate_track.cpp
cmake/: FindIERS.cmake
include/common/: coordinate_frame.hpp  types.hpp
include/dynamics/: aerodynamic_torque.hpp  atmosphere.hpp  atmospheric_drag.hpp  ballistic3d.hpp  dynamics.hpp  fictitious_forces.hpp  force.hpp  gravity.hpp  gravity_gradient_torque.hpp  point_mass_dynamics.hpp  rigid_body_dynamics.hpp  torque.hpp
include/filtering/: extended_kalman_filter.hpp  kalman_filter_base.hpp
include/fitting/: factory.hpp  plane_fit.hpp
include/integrator/: integrator.hpp  rk4.hpp
include/noise/: gaussian_noise.hpp
include/propagator/: analytical_propagator.hpp  factory.hpp  numerical_propagator.hpp  propagator.hpp
include/sensor/: radar_sensor_model.hpp  sensor_model.hpp
include/transforms/: coord_transforms.hpp  lla_to_ecef.hpp
scripts/: README.md  plot.py  requirements.txt
src/: CMakeLists.txt  lla_to_ecef.hpp
src/common/: CMakeLists.txt  coordinate_frame.cpp  types.cpp
src/dynamics/: CMakeLists.txt  aerodynamic_torque.cpp  atmospheric_drag.cpp  ballistic3d.cpp  fictitious_forces.cpp  gravity.cpp  gravity_gradient_torque.cpp  point_mass_dynamics.cpp  rigid_body_dynamics.cpp
src/filtering/: CMakeLists.txt  extended_kalman_filter.cpp
src/fitting/: CMakeLists.txt  plane_fit.cpp
src/integrator/: CMakeLists.txt  rk4.cpp
src/noise/: CMakeLists.txt  gaussian_noise.cpp
src/propagator/: CMakeLists.txt  analytical_propagator.cpp  factory.cpp  numerical_propagator.cpp  propagator.cpp
src/sensor/: CMakeLists.txt  radar_sensor_model.cpp
src/transforms/: CMakeLists.txt  coord_transforms.cpp
test/: CMakeLists.txt  test_common_coordinate_frame.cpp  test_common_types.cpp  test_dynamics_aerodynamic_torque.cpp  test_dynamics_atmosphere.cpp  test_dynamics_atmospheric_drag.cpp  test_dynamics_fictitious_forces.cpp  test_dynamics_gravity.cpp  test_dynamics_gravity_gradient_torque.cpp  test_dynamics_point_mass_dynamics.cpp  test_dynamics_rigid_body_dynamics.cpp  test_filtering_extended_kalman_filter.cpp  test_integrator_rk4.cpp  test_noise_gaussian_noise.cpp  test_propagator_analytical_propagator.cpp  test_propagator_factory.cpp  test_propagator_numerical_propagator.cpp  test_sensor_radar_sensor_model.cpp  test_transforms_coord_transforms.cpp
