# common lib
add_subdirectory(common)

# dynamics lib
add_subdirectory(dynamics)

# filtering lib
add_subdirectory(filtering)

# fitting lib
add_subdirectory(fitting)

# integrator lib
add_subdirectory(integrator)

# noise lib
add_subdirectory(noise)

# propagator lib
add_subdirectory(propagator)

# sensor lib
add_subdirectory(sensor)

# transforms lib
add_subdirectory(transforms)
